--- a/login.html
+++ b/login.html
@@ -58,7 +58,7 @@
         </div>
       </div>
       <div>
-        <a href="fillForm.html" class="url">Create an account!</a></div></br>
+        <a href="register.html" class="url">Create an account!</a></div></br>
         <a href="forgotPassword.html" class="url">Forgot your password?</a> 
       </div>     
     </div>
