--- a/login.html
+++ b/login.html
@@ -8,7 +8,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" type="image/x-icon" href="favicon.png">
-	<script src="script.js" type="text/javascript"></script>
+  <script src="script.js" type="text/javascript"></script>
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 
     <title>Login</title>
 
@@ -58,7 +59,7 @@
         </div>
       </div>
       <div>
-        <a href="register.html" class="url">Create an account!</a></div></br>
+        <a href="fillForm.html" class="url">Create an account!</a></div></br>
         <a href="forgotPassword.html" class="url">Forgot your password?</a> 
       </div>     
     </div>
